--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.1.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "gh-pages": "^3.1.0",
@@ -39,8 +40,8 @@
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^4.0.2",
-    "sass-loader": "^10.0.2",
-    "style-loader": "^1.2.1",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^1.3.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
